# Deep-Learning-Credit-card-fraud-Detection

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
models/: attention_extractor.keras  dense.keras  dense_best.keras  lstm.keras  lstm_attention.keras  lstm_attention_best.keras  lstm_best.keras  lstm_pe_attention.keras  lstm_pe_attention_best.keras  metadata.pkl  scaler.pkl
notebooks/: fraud_detection_analysis.ipynb
outputs/: model_comparison.json
src/: __init__.py  attention_utils.py  eda.py  inference.py  models.py  positional_encoding.py  preprocessing.py  train.py
