[project]
name = "dl-fraud-detection"
version = "0.1.0"
description = "Sequential financial transaction fraud detection with LSTM and attention"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
